# desafio_python

./: .env.example  .gitignore  Makefile  docker-compose.yml  dockerfile.app  pyproject.toml  requirements.txt
src/: main.py  orquestrator.py
src/configs/: beanie_config.py  kaggle_config.py
src/modules/airline/contracts/entities/: airline.py
src/modules/airline/contracts/implementations/airline_etl/: document_db_insert_from_csv.py  parse_csv_to_document.py
src/modules/airline/contracts/implementations/beanie/: document.py
src/providers/kaggle/: get_kaggle_airline_dataset.py
src/providers/kaggle/contracts/dtos/: kaggle_dtos.py
src/utils/: unzip_files.py
